--- a/style.css
+++ b/style.css
@@ -18,9 +18,18 @@ header {
 h1 {
   position: absolute;
   font-family: 'Sriracha', cursive;
-  font-size: 1.9em;
+  font-size: 2.5em;
   left: 105px;
   padding-top: 20px;
+  color: rgb(0, 0, 77);
+}
+
+#survey-title {
+  font-family: 'Sriracha', cursive;
+  text-align: center;
+  text-decoration: underline;
+  font-size: 1.6em;
+  padding-top: 10px;
   color: rgb(0, 0, 77);
 }
 
@@ -39,18 +48,32 @@ h2, h3 {
   width: 275px;
   margin: 15px;
   box-shadow: 3px 3px 5px 5px rgb(54, 54, 54);
+  transition: box-shadow 350ms ease-out;
+}
+
+#images img:hover {
+  box-shadow: 3px 3px 5px 5px rgb(255, 217, 0);
 }
 
 #button-div {
   text-align: center;
 }
 
-#reset {
+#reset, #clear {
   width: 150px;
   height: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+#charts {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #bar-chart, #donut-chart {
+  display: block;
   margin-top: 20px;
   margin-bottom: 20px;
 }
