--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h2, h3 {
 }
 
 #images img:hover {
-  box-shadow: 3px 3px 5px 5px rgb(255, 217, 0);
+  box-shadow: 0px 0px 6px 6px rgb(255, 217, 0);
 }
 
 #button-div {
@@ -64,6 +64,10 @@ h2, h3 {
   height: 50px;
   margin-left: 30px;
   margin-right: 30px;
+}
+
+#reset:hover, #clear:hover {
+  background: linear-gradient( rgba(140, 144, 207, 0.593), rgba(76, 81, 139, 0.593));
 }
 
 #charts {
